--- a/CSAbstract.tex
+++ b/CSAbstract.tex
@@ -10,8 +10,8 @@
   CrashSimulator to use incorrect behavior identified in one application running
   in one environment as a test case that determines whether another application
   in a different environment is making the same mistake. By testing an
-  application against a series of these test cases, CrashSimulator provides an
-  application's developer with an idea of how the application would respond were
+  application against a series of these test cases, CrashSimulator shows an
+  application's developer how the application would respond were
   it executed in the environment from which the test cases were
   generated. CrashSimulator was able to identify bugs resulting from anomalous
   filesystem and network conditions in 30 popular applications. The damage
