--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -15,7 +15,7 @@
         In order to inject anomalies and monitor program behavior as described
         above, CrashSimulator needs to have detailed interactions with the
         application under test at some level.  The option of carrying out these
-        interactions at the system call level was chosen because for several
+        interactions at the system call level was chosen for several
         reasons:
 
         \paragraph{Tooling}
@@ -25,7 +25,7 @@
         The first is {\tt ptrace}. {\tt Ptrace} is a process manipulation interface provided
         by the Linux kernel whose primary use case is debugger development.
         This work leverages {\tt ptrace} in order to start and stop execution of a
-        process as well as read and write the contents of the processes
+        process as well as read and write the contents of the processe's
         registers and memory.  Using these operations allows CrashSimulator to
         pause execution before and after each system call an application makes
         in order to manage execution and inject anomalies where appropriate.
@@ -44,9 +44,9 @@
         Operating at the system call level frees CrashSimulator from
         dependence on a particular programming language, compiler, or runtime system.  
 	CrashSimulator does not require any complex language parsing and
-        analysis code %while still allowing it to posess many of the benefits of
+        analysis code, %while still allowing it to posess many of the benefits of
         %systems that perform such work and makes it much easier to use CrashSimulator 
-	can be used with applications written in a wide variety of languages.
+	so it can be used with applications written in a wide variety of languages.
 	%Testing tools that perform language parsing do
 	%so in order to craft inputs that specifically exercise target execution
 	%paths in an application.  
@@ -72,10 +72,10 @@
         network configuration, or communication with other applications.  For
         example, if an application depends on a file being present in a filesystem,
         CrashSimulator can intercept calls to {\tt read()} from and {\tt write()} to
-        this file removing the need for this file to actually be present during
+        this file, removing the need for this file to actually be present during
         replay executions. Additionally, replay allows CrashSimulator to reproduce
-        the differences between version of libraries and other executable
-        dependencies alleviating the need install them in the test environment.
+        the differences between versions of libraries and other executable
+        dependencies, alleviating the need install them in the test environment.
 
     %\paragraph{Control Execution}
 
@@ -158,7 +158,7 @@
     Because CrashSimulator controls execution so that it faithfully
     follows the system call behavior described in the system call trace being
     replayed modifying this trace manually or programmatically is enough to
-    introduce anomalous behavior.  For example, suppose an anomaly requires a
+    introduce anomalous behavior.  For example, suppose an anomaly causes a
     call to {\tt read()} fail with return value of -1 and {\tt errno} set to
     {\tt EINVAL}.  Exposing an application to this situation only requires
     editing the system call trace such that the line describing this read call
@@ -186,10 +186,10 @@
     system calls the application makes.  Because the system call trace being
     replayed has been mutated to reflect the chosen anomaly, this process
     exposes the application to that anomaly. After the replayed execution
-    concludes, CrashSimulator able to use the ending state of the checker to
+    concludes, CrashSimulator is able to use the ending state of the checker to
     report whether or not the anomalous situation was handled appropriately.
     CrashSimulator
-    provides two types of checkers that each serve slightly different purposes.
+    can use two types of checkers that each serve slightly different purposes.
 
     %The up front effort
     %in this process only needs to be done once. One of CrashSimulator's major
@@ -237,7 +237,7 @@
     alter its behavior to deal with the anomaly, the application has not
     correctly handled the anomaly -- a failing result.  Alternatively, if the
     application deviates from the behavior recorded in the system call trace
-    driving the replay it is likely that the application is taking some action
+    driving the replay, it is likely that the application is taking some action
     to handle the injected condition -- an indication of possibly correct
     behavior.
 
@@ -274,11 +274,11 @@
       O\_NONBLOCK} and {\tt O\_ASYNC} flags from their parent socket.  In Linux,
     these values are not inherited.  As a result, the correct behavior is to
     always explicitly set these flags to the appropriate values on child
-    sockets.  This difference environmental difference presented itself as a bug
+    sockets.  This environmental difference presented itself as a bug
     in the socket implementation of Python 3.2.  Python took advantage of
     non-blocking sockets in order to implement timeout capabilities for sockets.
     Because Python did not specifically set the {\tt O\_NONBLOCK} flag on the
-    child sockets underlying its socket object abstraction it was possible that,
+    child sockets underlying its socket object abstraction, it was possible that,
     depending on the environment, the Python socket object would report the
     socket as either blocking or non-blocking while the actual underlying socket
     was configured for the opposite behavior.
@@ -297,7 +297,7 @@
     manually. This means that \emph{any} application that moves files around on
     a Linux system must be able to deal with the situation where some part of
     the directory structure may physically reside on a different device.
-    During our evaluation provided CrashSimulator with an understanding of what
+    During our evaluation, modeled what
     it takes to move a file correctly using the GNU Coreutils {\tt mv} command
     as our ``gold standard.''  We found many applications do not handle the
     above situation correctly including the {\tt shutils} module from the Python
