--- a/CSConclusion.tex
+++ b/CSConclusion.tex
@@ -41,9 +41,10 @@ finite state models characterizing correct (or incorrect) behavior.
 This provides a generic ``signature'' for that behavior, which is
 portable across applications. 
 Consequently, a set, of mutations and checkers can be collected from any existing
-application for use in testing other new or existing application. 
+application for use in testing other new or existing applications. 
 In this way, an ever-expanding ``test suite'' can
-be created allowing lessons learned from a bug in one application to benefit others.
+be created allowing lessons learned from bugs in some application to benefit many
+others.
 
 Our evaluation of CrashSimulator has shown it to be both performant and
 effective.  CrashSimulator was able to identify bugs related to unusual file
