fix minor issues

--- a/bibdata.bib
+++ b/bibdata.bib
@@ -254,7 +254,7 @@
                Philipp von Styp{-}Rekowsky and
                Andreas Zeller},
   title     = {Mining sandboxes},
-  booktitle = {ICSE} 2016},
+  booktitle = {{ICSE} 2016},
   publisher = {{ACM}},
   pages     = {37--48},
   year      = {2016},
@@ -13326,16 +13326,16 @@ address = {Antwerp, Belgium},
 
 
 @Misc{YumAptEndless,
-  key = "YumAptEndless",
-  title = "{Attacks on Package Managers}",
-  note = "{\url{https://www2.cs.arizona.edu/stork/packagemanagersecurity/otherattacks.html}}",
+  key = {YumAptEndless},
+  title = {Attacks on Package Managers},
+  note = {\url{https://www2.cs.arizona.edu/stork/ packagemanagersecurity/otherattacks.html}},
 }
 
 
 @Misc{Slowloris,
-  key = "Slowloris",
-  title = "{Apache HTTP DoS Tool Released}",
-  note = "{\url{https://isc.sans.edu/diary/Apache+HTTP+DoS+tool+released/6601}}",
+  key = {Slowloris},
+  title = {{Apache HTTP DoS Tool Released}},
+  note = {\url{https://isc.sans.edu/diary/ Apache+HTTP+DoS+tool+released/6601}},
 }
 
 
