--- a/CSRelatedWork.tex
+++ b/CSRelatedWork.tex
@@ -1,4 +1,4 @@
-\section{Related Work} \label{sec:related}
+\section{Related Work} \label{sec:relatedwork}
 
 \iffalse
 While there is a vast literature on test
