fix minor issues

--- a/CSRelatedWork.tex
+++ b/CSRelatedWork.tex
@@ -31,7 +31,7 @@ more recently, CORRAL~\cite{DBLP:conf/sigsoft/LalQ14} for conformance
 checking of Windows device drivers against the Windows kernel API,
 FindBugs~\cite{DBLP:conf/oopsla/HovemeyerP04} for detecting API usage
 bugs in Java programs, FiSC~\cite{Musuvathi04modelchecking} for
-finding bugs in TCP implemenations, and the Explode
+finding bugs in TCP implementations, and the Explode
 system~\cite{Yang:2006:ELG:1298455.1298469} for detecting crash
 recovery bugs in file system implementations. Unlike CrashSimulator,
 these approaches depend on the availability of source or byte code and
@@ -80,10 +80,10 @@ using log files to detect anomalies~\cite{pinpoint,
 %this work, our focus is on diagnosing network issues from logs
 %of syscalls, though prior work on log mining can be used to
 %expand our scope.
-Khadke et al.~\cite{khadketransparent} introduced a performance
-debugging approach that relies on system call tracing. Unlike this
-prior work, our system does not assume synchronized clocks and
-reconstructs a plausible global ordering.
+%Khadke et al.~\cite{khadketransparent} introduced a performance
+%debugging approach that relies on system call tracing. Unlike this
+%prior work, our system does not assume synchronized clocks and
+%reconstructs a plausible global ordering.
 CheckAPI~\cite{rasley2015detecting} and
 NetCheck~\cite{Zhuang_NSDI_2014} use system call traces to diagnose an
 application's violations of cross-platform portability that are
